2007-02-16  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Don't show completion windo for
	  "using" keyword when written inside a class. Fixes bug #80868.
	* Parser/Resolver.cs: Removed unneeded parameter and fix potential
	  nullref.

2007-02-16  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpBinding.addin.xml: Change add-in versions to 0.13.

2007-02-15  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/Resolver.cs: When checking for accessibility take into account
	  the qualifier type. There are some restrictions when accessing to
	  protected members from incorrect qualifier types.

2007-02-15  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/Resolver.cs, Parser/LanguageItemVisitor.cs: Properly resolve
	  generic type identifiers. Fixes bug #80840.

2007-02-15  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/LanguageItemVisitor.cs, Parser/TypeVisitor.cs: When resolving
	  a field reference, look for static members if instance members
	  can't be found. Fixes bug #80841.

2007-02-12  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpBinding.mdp: Added project reference for NRefactory.
	* Parser/CSharpVisitor.cs: Collect parameter flags when parsing a
	  method. Fixes bug #80814.

2007-02-12  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Allow crossing line boundaries when
	  looking for tokens. Fixes bug #80719.
	* CSharpBindingCompilerManager.cs: Handle internal packages.

2007-02-09  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpAmbience.cs: When converting a class, honor
	  UseFullyQualifiedName flag.
	* Makefile.am: distcheck fixes

2007-02-07  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpBinding.mdp: Updated.
	* gtk-gui/CSharpBinding.CodeGenerationPanelWidget.cs,
	  gtk-gui/gui.stetic: Translation fixes.

2007-02-06  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/OverrideCompletionData.cs: Moved from CSharpTextEditorExtension.